--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -20,6 +20,12 @@ background-size: 100%;
 background-repeat: no-repeat;
 }
 
+.destination-bg{
+    background-image: url(./assets/destination/background-destination-desktop.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat; 
+}
+
 .header{
     width: 100%;
     margin-left: 7px;
@@ -59,9 +65,17 @@ background-repeat: no-repeat;
     text-transform: uppercase;
     font-size: 14px;
     font-family: Bellefair;
-    margin: 30px;
+    padding: 35px 0;
+    margin: 0 30px;
     letter-spacing: 1px;
+    text-decoration:none;
+    color: #ffffff;
 }
+
+.nav-links.active , .dest-link.active{
+    border-bottom: 2px solid white;
+}
+
 .nav-links span{
     font-weight: 600;
     font-size: 15px;
@@ -119,5 +133,85 @@ background-repeat: no-repeat;
     color: #D0D6F9;
     font-family: Barlow;
     font-size: 18px;
-    letter-spacing: 1px;
+    line-height: 30px;
+}
+
+
+.destination-main{
+    display: flex;
+    margin: 10%;
+    position: absolute;
+}
+
+
+.destination-main .hr{
+    position: static;
+    margin-top: 70px;
+    margin-bottom: 20px;
+}
+
+.destination-main h2{
+    font-family: Bellefair;
+    text-transform: uppercase; 
+    font-size: 32px;
+    font-weight: 100;
+}
+
+.destination-img-div, .about-destination{
+    width: 50%;
+}
+.destination-name{
+    font-family: Bellefair;
+    font-size: 100px;
+    font-weight: 100;
+    margin: 0;
+
+
+}
+
+.dest-info{
+    font-family: Barlow;
+    font-size: 18px;
+    line-height: 30px;
+    color: #D0D6F9;
+    
+}
+
+
+.distance-info{
+    display: flex;
+}
+
+.distance-info h2{
+    font-size: 28px;
+    margin-top: 10px;
+}
+
+.distance-info h5{
+    font-family: Barlow;
+    font-size: 14px;
+    color: #D0D6F9;
+    text-transform: uppercase;
+    font-weight: 100;
+    margin-bottom: 0;
+    opacity: 0.6;
+}
+
+.avg-distance , .travel-time-info{
+    width: 50%;
+}
+
+.destination-menu{
+    display: flex;
+    justify-content: left;
+    margin: 80px 0 40px;
+}
+
+.dest-link{
+margin-right:20px;
+text-transform: uppercase;
+font-family:Bellefair;
+font-weight: 100;
+padding-bottom: 5px;
+
 }
