--- a/style.css
+++ b/style.css
@@ -38,6 +38,17 @@ background-repeat: no-repeat;
     background-repeat: no-repeat; 
 }
 
+.headers{
+    font-family: Bellefair;
+    text-transform: uppercase; 
+    font-size: 30px;
+    font-weight: 100;
+    letter-spacing: 2px;
+}
+
+
+
+/* index */
 .header{
     width: 100%;
     margin-left: 7px;
@@ -147,8 +158,10 @@ background-repeat: no-repeat;
     font-size: 18px;
     line-height: 30px;
 }
+/* index */
 
 
+/* Destination */
 .destination-main{
     display: flex;
     margin: 10%;
@@ -162,12 +175,6 @@ background-repeat: no-repeat;
     margin-bottom: 20px;
 }
 
-.destination-main h2{
-    font-family: Bellefair;
-    text-transform: uppercase; 
-    font-size: 32px;
-    font-weight: 100;
-}
 
 .destination-img-div, .about-destination{
     width: 50%;
@@ -177,11 +184,12 @@ background-repeat: no-repeat;
     font-size: 100px;
     font-weight: 100;
     margin: 0;
+    text-transform: uppercase;
 
 
 }
 
-.dest-info{
+.dest-info , .crew-member-info{
     font-family: Barlow;
     font-size: 18px;
     line-height: 30px;
@@ -197,6 +205,9 @@ background-repeat: no-repeat;
 .distance-info h2{
     font-size: 28px;
     margin-top: 10px;
+    font-family: Bellefair;
+    font-weight: 100;
+    text-transform: uppercase;
 }
 
 .distance-info h5{
@@ -213,6 +224,8 @@ background-repeat: no-repeat;
     width: 50%;
 }
 
+
+
 .destination-menu{
     display: flex;
     justify-content: left;
@@ -227,3 +240,47 @@ font-weight: 100;
 padding-bottom: 5px;
 
 }
+/* Destination */
+
+
+
+/* Crew */
+.crew-main{
+    position: absolute;
+    bottom:0 ;
+    display: flex;
+}
+
+.crew-images , .crew-info{
+    width: 50%;
+}
+
+.crew-info{
+    margin-left: 100px;
+}
+
+.crew-member-info{
+    margin-right: 130px;
+    width: 500px;
+}
+
+#position{
+    margin-top: 130px;
+    text-transform: uppercase;
+    font-family:Bellefair;
+    font-weight: 100;    
+    font-size: 24px;
+    color: #979797;
+    margin-bottom: 0;
+}
+
+#crew-member{
+    text-transform: uppercase;
+    font-family:Bellefair;
+    font-weight: 100;    
+    font-size: 50px;
+    margin-bottom: 40px;
+    margin-top: 10px;
+}
+
+/* Crew */
