--- a/style.css
+++ b/style.css
@@ -255,21 +255,28 @@ cursor: pointer;
 
 /* Crew */
 .crew-main{
-    position: absolute;
-    bottom:0 ;
     display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin: 10% 10% 0;
 }
 
 .crew-images , .crew-info{
     width: 50%;
 }
 
+.crew-images img{
+    height: 80%;
+    position: absolute;
+    bottom: 0;
+    right: 10%;
+}
+
 .crew-info{
-    margin-left: 100px;
+    text-align: left;
 }
 
 .crew-member-info{
-    margin-right: 130px;
     width: 500px;
 }
 
@@ -364,7 +371,7 @@ cursor: pointer;
 
 @media only screen and (max-width: 500px) {
 .background{
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
@@ -379,6 +386,7 @@ cursor: pointer;
         }
         .crew-bg{
             background-image: url(./assets/crew/background-crew-mobile.jpg);
+            
         }
         .technology-bg{
             background-image: url(./assets/technology/background-technology-mobile.jpg);
@@ -509,5 +517,59 @@ border-bottom: 1px solid #D0D6F9;
 .avg-distance, .travel-time-info {
     width: 100%;
 }
+
+
+
+.crew-main{
+    flex-direction: row;
+display: block;   
+text-align: center; 
+margin: 120px auto 0;
+position: relative;
+
+}
+.crew-images, .crew-info{
+    width: 100%;
+    text-align: center;
+}
+
+
+.crew-images img{
+    position: static;
+    height: auto;
+    width: 80%;
+    margin: 50px auto 0;
+    border-bottom: 1px solid #D0D6F9;
+    padding: 0 10%;
+
+}
+.crew-member-info{
+    width: 90%;
+}
+#crew-member{
+    font-size: 25px;
+}
+#position{
+    margin-top: 50px;
+    font-size: 20px;
+}
+
+.crew-info .headers{
+    position: absolute;
+    top: 0;
+    margin: 0 auto;
+    left: 20%;
+
+}
+
+.crew-menu{
+    justify-content: center;
+    margin: 30px auto 20px;
+}
+
+.crew-member-info{
+    border-bottom: none;
+}
+
 
 }
